# nowcasting-models

./: .gitattributes  .gitignore  OVERVIEW.txt  README.md  SRC.txt  STRUCTURE.txt  TREE.md  build_trace.html  config.yaml  profile.html  pyproject.toml  requirements.txt  series_labels.txt
data/metadata/: series_failed_to_check.txt  series_metadata_report.txt  tcode_map.json  tcode_map.json.meta.json  variable_group_map.json  variable_groups.csv
data/processed_data/: panel_start_1960_drop_late_sasdate_column.csv  panel_start_1965_keep_late_sasdate_column.csv
data/processed_data/stationarity/: panel_start_1960_drop_late_fixhousing_delta.csv  panel_start_1965_keep_late_fixhousing_delta.csv
data/quality_checks/: missing_positions_summary.csv
data/quality_checks/variants/: panel_start_1960_drop_late_missing_by_series.csv  panel_start_1960_drop_late_missing_positions_summary.csv  panel_start_1965_keep_late_missing_by_series.csv  panel_start_1965_keep_late_missing_positions_summary.csv
scripts/: bootstrap.py  check_series_metadata.py  download_data.py  eda.py  export_series_labels.py  generate_group_map.py  generate_tcode_map.py  group_analysis.py  inspect_raw_csv.py  run_deseasonalization.py  run_pipeline.py  run_preprocessing.py
scripts/ingestion/: build_transformed_panel.py  extract_tcodes.py  fetch_gdp_target.py
scripts/preprocessing/: apply_extra_transforms.py  build_panel_variants.py
scripts/validation/: check_stationarity_panel.py  check_stationarity_target.py  check_structure.py  check_target_gdp.py  report_missing_diagnostics.py
(+25 files in other folders)
