[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfm-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "DFM ingestion + preprocessing utilities"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]   # so src/dfm_pipeline is found
